--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,17 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars/Semantic-UI -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>Semantic-UI</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+			<version>0.34</version>
+		</dependency>
 	</dependencies>
 
 	<build>
