--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
 			<artifactId>webjars-locator</artifactId>
 			<version>0.34</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<plugins>
