--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,8 @@
                         <exclude>**/domain/*</exclude>
                         <exclude>**/exceptions/*</exclude>
                         <exclude>**/TaskForm.class</exclude>
+                        <exclude>**/GruppoFormCommand.class</exclude>
+                        <exclude>**/autenticazion/configuration/*</exclude>
                     </excludes>
                 </configuration>
             </plugin>
